# kanari-cryptography

./: ARCHITECTURE_REFACTORING.md  Cargo.toml  MOVE_VM_INTEGRATION.md  README.md  RUNNING_GUIDE.md  STATE_MANAGER_IMPROVEMENTS.md  TRANSACTION_SIGNING.md  TRANSFER_SYSTEM_README.md  WALLET_INTEGRATION_README.md
crates/kanari/: Cargo.toml  MOVE_CLI_GUIDE.md  MOVE_INTEGRATION.md  MOVE_VM_USAGE.md
crates/kanari-bank/: Cargo.toml  MOVE_INTEGRATION.md
crates/kanari-bank/src/: main.rs  move_compiler_wrapper.rs  move_runtime.rs  move_vm_state.rs
crates/kanari-common/: Cargo.toml
crates/kanari-common/src/: lib.rs
crates/kanari-crypto/: BUG_ANALYSIS_NEW.md  Cargo.toml  README_MOVE.md  TEST_REPORT.md
crates/kanari-crypto/examples/: hd_wallet_example.rs  move_coin_wallet.rs  sign_verify.rs
crates/kanari-crypto/src/: compression.rs  encryption.rs  hd_wallet.rs  keys.rs  keystore.rs  lib.rs  move_natives.rs  signatures.rs  wallet.rs
crates/kanari-framework-builder/: Cargo.toml  README.md  build.rs
crates/kanari-framework-builder/src/: lib.rs
crates/kanari-frameworks/: README.md
crates/kanari-frameworks/released/3/0x1/: package.rpd
crates/kanari-frameworks/released/3/0x2/: package.rpd
crates/kanari-frameworks/src/: main.rs
crates/kanari-move-runtime/: CONTRACT_GUIDE.md  CONTRACT_SYSTEM_SUMMARY.md  Cargo.toml
crates/kanari-move-runtime/examples/: blockchain_demo.rs  contract_demo.rs  contract_demo_signed.rs  publish_all.rs
crates/kanari-move-runtime/src/: blockchain.rs  changeset.rs  contract.rs  engine.rs  gas.rs  lib.rs  move_runtime.rs  move_vm_state.rs  state.rs
crates/kanari-node/: Cargo.toml
crates/kanari-node/src/: main.rs
crates/kanari-rpc-api/src/: lib.rs
crates/kanari-rpc-client/src/: lib.rs
crates/kanari-rpc-server/src/: lib.rs
crates/kanari-types/: Cargo.toml
crates/kanari-types/examples/: module_connection_demo.rs
crates/kanari-types/src/: address.rs  balance.rs  block.rs  coin.rs  genesis.rs  kanari.rs  lib.rs  module_registry.rs  object.rs  transfer.rs  tx_context.rs
crates/kanari-types/src/stdlib/: ascii.rs  error.rs  mod.rs  option.rs  signer.rs  string.rs  vector.rs
crates/kanari-types/tests/: integration_test.rs
crates/kanari/src/: main.rs
crates/kanari/src/command/move_cli/: call.rs  mod.rs  new.rs  publish.rs
james/: Move.toml
james/sources/: james.move
