[workspace]
# Workspace configuration for the "kanari-sdk" project.
# Defines the overall structure and settings for the workspace.
# name = "kanari-sdk"
resolver = "2"                   # Use the version 2 feature resolver for more consistent feature resolution.

# Exclude List: Directories to be excluded from the workspace build.
# This can be useful for excluding third-party code or components 
# that are not directly part of the workspace's build process.
exclude = [
    "third_party/move"           # Exclude the 'third_party/move' directory from workspace builds.
]

# Members List: Crates that are part of this workspace.
# These are the core components of the "kanari-" project.
members = [

]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]



# Move dependencies
move-binary-format = { path = "third_party/move/crates/move-binary-format" }
move-bytecode-utils = { path = "third_party/move/crates/move-bytecode-utils" }
move-bytecode-source-map = { path = "third_party/move/crates/move-bytecode-source-map" }
move-cli = { path = "third_party/move/crates/move-cli" }
move-compiler = { path = "third_party/move/crates/move-compiler" }
move-core-types = { path = "third_party/move/crates/move-core-types" }
move-disassembler = { path = "third_party/move/crates/move-disassembler" }
move-package = { path = "third_party/move/crates/move-package" }
move-unit-test = { path = "third_party/move/crates/move-unit-test" }
move-vm-config = { path = "third_party/move/crates/move-vm-config" }
move-vm-test-utils = { path = "third_party/move/crates/move-vm-test-utils/", features = [
  "tiered-gas",
] }
move-vm-types = { path = "third_party/move/crates/move-vm-types" }
move-vm-profiler = { path = "third_party/move/crates/move-vm-profiler" }
move-command-line-common = { path = "third_party/move/crates/move-command-line-common" }
move-transactional-test-runner = { path = "third_party/move/crates/move-transactional-test-runner" }
move-ir-types = { path = "third_party/move/crates/move-ir-types" }
move-prover = { path = "third_party/move/crates/move-prover" }
move-stackless-bytecode = { path = "third_party/move/crates/move-stackless-bytecode" }
move-symbol-pool = { path = "third_party/move/crates/move-symbol-pool" }
move-abstract-stack = { path = "third_party/move/crates/move-abstract-stack" }