[package]
name = "kanari-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39.workspace = true
k256 = "0.13.4"
p256 = "0.13.2"
ed25519-dalek = "2.1.1"


rand.workspace = true
hex.workspace = true
serde_json = { workspace = true , default-features = true }
lazy_static.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
argon2.workspace = true
aes-gcm = "0.10.3"
base64 = "0.22.1"
# Add common dependency

kanari-types.workspace = true

# Add missing sha3 dependency
sha3.workspace = true