[package]
name = "kanari-move-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bcs = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rocksdb = "0.20"
hex = "0.4"
sha2 = "0.10"

# Move VM dependencies (use workspace/local paths similar to other crates)
move-core-types = { workspace = true }
move-vm-runtime = { path = "../../third_party/move/crates/move-vm-runtime" }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }

kanari-types = { path = "../kanari-types" }
kanari-crypto = { path = "../kanari-crypto" }
move-vm-test-utils = { path = "../../third_party/move/crates/move-vm-test-utils" }
