[package]
name = "kanari-node"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
kanari-move-runtime = { workspace = true }
kanari-rpc-server = { workspace = true }
kanari-types = { workspace = true }
kanari-crypto = { workspace = true }
serde = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.dev]
opt-level = 0
